# story2audio

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  docker-compose.yml  main.py  pyproject.toml
static/locales/: de.json  en.json  fr.json  ja.json  ko.json  vi.json  zh.json
templates/: index.html
tests/: conftest.py  test_chunking.py
