[project]
name = "story2audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.135.3",
    "gtts>=2.5.4",
    "jinja2>=3.1.6",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]
