[project]
name = "story2audio"
version = "0.1.0"
description = "Ứng dụng FastAPI chuyển văn bản tiếng Việt thành audio MP3 với streaming và cache"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "edge-tts>=7.2.8",
  "fastapi>=0.115.0",
  "gtts>=2.5.4",
  "python-dotenv>=1.1.0",
  "uvicorn[standard]>=0.34.0",
]